# ChangeLog for app-arch/cabextract
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/cabextract/ChangeLog,v 1.63 2010/08/03 17:19:45 ranger Exp $

  03 Aug 2010; Brent Baude <ranger@gentoo.org> cabextract-1.3.ebuild:
  Marking cabextract-1.3 ppc64 for bug 329891

  31 Jul 2010; Jeroen Roovers <jer@gentoo.org> cabextract-1.3.ebuild:
  Stable for HPPA PPC (bug #329891).

  31 Jul 2010; Raúl Porcel <armin76@gentoo.org> cabextract-1.3.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #329891

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org> cabextract-1.3.ebuild:
  Stable on amd64 wrt bug #329891

  31 Jul 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  cabextract-1.3.ebuild:
  x86 stable wrt security bug #329891

*cabextract-1.3 (30 Jul 2010)

  30 Jul 2010; Peter Volkov <pva@gentoo.org> +cabextract-1.3.ebuild:
  Version bump, bug #329891, thank Samuli Suominen and upstream developer
  Stuart Caie for reports.

  12 Oct 2009; Peter Volkov <pva@gentoo.org> -cabextract-1.2.ebuild:
  Drop old.

  12 Oct 2009; Peter Volkov <pva@gentoo.org> cabextract-1.2-r1.ebuild:
  Rebuild configure script to fix infinite loop in AC_FUNC_MKTIME, bug
  #271592, thank Rafał Mużyło for report.

  30 May 2009; nixnut <nixnut@gentoo.org> cabextract-1.2-r1.ebuild:
  ppc stable #271119

  28 May 2009; Steve Dibb <beandog@gentoo.org> cabextract-1.2-r1.ebuild:
  amd64 stable, bug 271119

  28 May 2009; Raúl Porcel <armin76@gentoo.org> cabextract-1.2-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #271119

  27 May 2009; Christian Faulhammer <fauli@gentoo.org>
  cabextract-1.2-r1.ebuild:
  stable x86, bug 271119

  25 May 2009; Brent Baude <ranger@gentoo.org> cabextract-1.2-r1.ebuild:
  Marking cabextract-1.2-r1 ppc64 for bug 271119

  25 May 2009; Jeroen Roovers <jer@gentoo.org> cabextract-1.2-r1.ebuild:
  Stable for HPPA (bug #271119).

*cabextract-1.2-r1 (11 Jan 2009)
