@@ -1,6 +1,6 @@
 DIST cabextract-1.2.tar.gz 194006 RMD160 55292e287047b14945e69b0be8ab9ff1d4902f71 SHA1 871b3db4bc2629eb5726659c147aecea1af6a6d0 SHA256 ae9c860a74fcea109887b4cf5de8fce575ac14737571520b14b84816f17125eb
 DIST cabextract-1.3.tar.gz 217633 RMD160 a02fc161719d57cbee934f0a12ed5441ec7ddc27 SHA1 112469b9e58497a5cfa2ecb3d9eeb9d3a4151c9f SHA256 d464383a35b48d54a3990c02f89acbfc677e655ef46194eae64fb8f433c3c001
 EBUILD cabextract-1.2-r1.ebuild 1413 RMD160 ab9c20b0cb9485221da3ce5d9223a05bfe145f3e SHA1 9e44fca9574241054f70d3128571ea4b0dc230bf SHA256 eee07d75f478e30a269f48c53e6d472aadd2867172cf757149bab125a7b8c898
-EBUILD cabextract-1.3.ebuild 1311 RMD160 344c6365b344d0309dbbdd05463e9d23f2c877a1 SHA1 90641a8d3c233cb9410e7747d276fd042e8c9dae SHA256 68e8c3777e8ee6cf6128cc87522c25bc08cbd9538c18639734ab3ef32c450f98
-MISC ChangeLog 8621 RMD160 96e07cd0e4a68978c837373b2639a518a25d5c71 SHA1 c9611f6beda6dc05f95173c7f063cf83b14603b8 SHA256 84a8d23563ae63d35442637424bb47cdb452053c1c74219d0b7f8ba14afd0a6b
+EBUILD cabextract-1.3.ebuild 1575 RMD160 b9dc464a11cdf300e726a24a8e4bd680646fa230 SHA1 ee002fa2a8c136de146613d9b44d8eb37f661c48 SHA256 293e5cd1cdaa4fd1932afc699771f8353d3a1831d5ef9a41f80b6b8a1f8b65f3
+MISC ChangeLog 8766 RMD160 d02bea5cfca1dbcf78bdba30dbea0e182ae13d27 SHA1 0be8bb84eb764f1e7ea5c7abf9ec30c14764f31c SHA256 c604aee727efead459ad07619859637ab1767438310e6c4cda6ab2562fdf558f
 MISC metadata.xml 388 RMD160 4c46f3dc442865e942e22519fa4494dac62e9694 SHA1 a356ebe1c2b65717dd8c8bde042c46b76d8c34b0 SHA256 bd36996a91c4decd278de7016c374730e9e7a7b3b58e01fe7ebac2a049cab5a7
